Build 218
Application Changes:
- For improvements that require specifying text where possible options or suggestions for the text are loaded from a data file, these options now show up translated to the program's UI language if it is not English.
- Fixed an issue where adding plugins to cyberlimbs would cause Chummer to freeze up.
- Increased the speed of exporting characters by between 10% and 60% (depending on the language and custom dataset combinations used).

Data Changes:
- Fixed the stats for Boggles so that they appear and can be processed properly when creating a new critter. Fixes #4679.

Build 217
Application Changes:
- Adding a new non-advanced lifestyle that is eligible for Trust Fund no longer causes a crash. Fixes #4601.
- Adding a plugin to a custom cyberweapon no longer causes a crash.
- Cyberware limited by the number of limbs is now not affected by detached modular limbs.
- Tooltips breaking down a character's total armor now properly recognize when certain sources of armor have been made invalid.
- Fixed Gear not using Restricted Gear correctly. Possibly needs more testing, but initial efforts seem correct. 
- Some changes to logic on how usage of restricted gear is displayed.
- Adept Powers, AI Programs, Metamagic Arts, Complex Forms, Critter Powers, Mentor Spirits, Metamagics, Spells, and Weapon Mounts should now automatically fetch notes from linked PDFs.
- Mugshot compression settings should now properly get saved with other global settings.
- Added an option to have Chummer automatically set the lossy compression quality for mugshots in save files instead of using the same, manually defined setting for all images. Using this automatic setting, larger images will be saved with lower Jpeg quality settings because Jpeg artifacts will be less visible in them, while smaller images get saved with higher quality settings.