@@ -1,3 +1,7 @@
+Future Build 219
+Application Changes:
+- Fixed a bug preventing any override, custom, or amend files from processing.
+
 Build 218
 Application Changes:
 - For improvements that require specifying text where possible options or suggestions for the text are loaded from a data file, these options now show up translated to the program's UI language if it is not English.
